# qaps-deploy

./: CNAME  Procfile  README.md  asset-manifest.json  index.html  manifest.json  package-lock.json  requirements.txt  run.sh
Notes and Research/: Readme.md
Status Reports/: Readme.md  StatusReportWeek10.docx  StatusReportWeek11.docx  StatusReportWeek12.docx  StatusReportWeek13.docx  StatusReportWeek15.docx  StatusReportWeek16.docx  StatusReportWeek17.docx  StatusReportWeek18.docx  StatusReportWeek19.docx  StatusReportWeek20.docx  StatusReportWeek21.docx  StatusReportWeek22.docx  StatusReportWeek23.docx  StatusReportWeek24.docx  StatusReportWeek25.docx  StatusReportWeek4.docx  (+9 more)
src/back-end/: .gitignore  Alignment.py  Bisect.py  BisectAngle.py  Bisection.py  CircFit.py  Closure.py  Dockerfile  EndptDist.py  Equilaterality.py  Find4Sides.py  FindTriangleSides.py  Intersection.py  LineIntersect.py  LineLength.py  MinMaxCircle.py  ScoreImage1.py  ScoreImage10.py  ScoreImage2.py  ScoreImage3.py  ScoreImage4.py  ScoreImage5.py  ScoreImage6.py  ScoreImage7.py  ScoreImage8.py  ScoreImage9.py  Straightness.py  app.py  back-end-setup.md  calculate.py  circleCalculations.py  db.py  downloadpdf.py  evaluationDDL.sql  packages.txt  process_data.py  pyproject.toml  raw_data_collection.py  serviceBroker.py
src/back-end/Testing/: TestBisect.py  TestFind4Sides.py  TestFindTriangleSides.py  TestScoreImage1.py  TestScoreImage10.py  TestScoreImage2.py  TestScoreImage3.py  TestScoreImage4.py  TestScoreImage5.py  TestScoreImage6.py  TestScoreImage7.py  TestScoreImage8.py  TestScoreImage9.py
(+51 files in other folders)
