[tool.poetry]
name = "back-end"
version = "0.1.0"
description = ""
authors = ["John Leonard <john@lowkeylabs.com>"]
readme = "README.md"
packages = [{include = "back_end"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
flask-cors = "^3.0.10"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
mysql-connector-python = "^8.0.32"
flask-jwt-extended = "^4.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
